force-app/main/default/objects/Placement_Form__c/Placement_Form__c.object-meta.xml
<CustomObject>
    <label>Placement Form</label>
    <nameField>
        <displayFormat>Placement from-{0}</displayFormat>
        <label>Placement Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Placements Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>